@@ -15,6 +15,7 @@
 		<script type="text/javascript" src="js/construct_manager.js"></script>
 		<script type="text/javascript" src="js/pathfinding.js"></script>
 		<script type="text/javascript" src="js/levels/level1.js"></script>
+		<script type="text/javascript" src="js/font.js"></script>
 		<script type="text/javascript" src="js/shell.js"></script>
 	</head>
 	<body>
@@ -98,6 +99,7 @@
 				</div>
 			</div>
 		</div>
+		<canvas style="display: none" id="text_buffer" width="1000" height="1000"></canvas>
 		
 		<div>
 			<input type="button" value="Add money" id="tmp_add_money" />
