@@ -36,6 +36,7 @@ HeadquarterBuilding.prototype = new AbstractBuilding();
 
 HeadquarterBuilding.box_image = 'headquarter_box.png';
 HeadquarterBuilding.res_key = 'headquarter.png';
+HeadquarterBuilding.obj_name = 'Headquarter 1';
 HeadquarterBuilding.enabled = true;
 HeadquarterBuilding.count = 0;
 HeadquarterBuilding.cell_size = {x: 5, y: 4};
